feature: add domain, model and repository

--- a/services/event/.env.example
+++ b/services/event/.env.example
@@ -11,5 +11,11 @@ CUSTOM_TIMEOUT=60*minute
 
 DBMATE_DRIVER=mysql
 DATABASE_URL="${DBMATE_DRIVER}://${DB_USER}:${DB_PASS}@localhost:${DB_PORT}/${DB_NAME}"
-DBMATE_MIGRATIONS_DIR=./database/migration
-DBMATE_SCHEMA_FILE=./database/migration/schema.sql
+DBMATE_MIGRATIONS_DIR=./migration
+DBMATE_SCHEMA_FILE=./migration/schema.sql
+
+#cloudinary
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+CLOUDINARY_UPLOAD_FOLDER=
