--- a/services/event/.env.example
+++ b/services/event/.env.example
@@ -19,3 +19,8 @@ CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 CLOUDINARY_UPLOAD_FOLDER=
+
+#connecion pooling
+MAX_CONN_TIME=5m
+MAX_CONN_OPEN=10
+MAX_CONN_IDLE=10
